# nosql

./: .env.example  .gitignore  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_tables.py  002_seed_data.py  003_create_article_table.py  004_seed_articles.py
app/: database.py  main.py  models.py  schema.py
app/routes/: fts.py  mongodb.py  neo4j.py  postgis.py  redis.py
database/mongodb/: examples.mql  seed.py
database/neo4j/: seed.py
database/sql/: fts_queries.sql  spatial_queries.sql
