[project]
name = "nosql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "redis",
    "sqlalchemy",
    "geoalchemy2",
    "psycopg2-binary",
    "alembic",
    "shapely>=2.1.2",
    "neo4j",
]
